<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scan Compare</string>
    <string name="lblTpPath">Test Plan :</string>
    <string name="btnReload">Reload</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnScan">Scan</string>
    <string name="btnNext">&gt;&gt;</string>
    <string name="btnPass">Pass</string>
    <string name="lblTestCaseList">Test Cases :</string>
    <string name="lblTestCaseInfo">Test case info :</string>
    <string name="lblTestCaseName">Name :</string>
    <string name="lblTCID">TCID :</string>
    <string name="lblTCDescription">Description :</string>
    <string name="lblExpectedResult">Expected :</string>
    <string name="lblDecoded">Decoded :</string>
    <string name="title_activity_test2">Test2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_columns_settings">ColumnsSettingsActivity</string>
    <string name="title_activity_scan_compare">ScanCompareActivity</string>
    <string name="btnPrevious">&lt;&lt;</string>
    <string name="action_exportScanConfig">Export Scan Config</string>

</resources>
